syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "model.proto";

message ListConfigsByDeviceRequest {
	OpDevice device = 1;
}

message ListConfigsByDeviceResponse {
	repeated Config configs = 1;
}
